commit fine lezione

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div id="testa">
   <h1>User Management System</h1>
 </div>
+<ul>
+  <li>
+    <a href="#" class="new-user" (click) = 'newUser()'>Nuovo utente</a>
+  </li>
+</ul>
 <div id="test-component">
   <app-test-component></app-test-component>
 </div>
