--- a/src/app/user-detail/user-detail.component.html
+++ b/src/app/user-detail/user-detail.component.html
@@ -1,4 +1,4 @@
-<form class="userForm">
+<form class="userForm" #f="ngForm">
   <input [(ngModel)]="user.id" type="hidden" name="id" id="id">
   <div class="form-group">
     <label for="firstname">Firstname</label>
@@ -25,6 +25,7 @@
     <input [(ngModel)]="user.province" name="province" id="province">
   </div>
   <div class="form-group form-footer">
+    <button class="btn-reset" (click)="resetForm(f.form)">Reset</button>
     <button class="btn-save" (click) = "saveUser()">Salva</button>
   </div>
 </form>
