--- a/src/app/user-detail/user-detail.component.css
+++ b/src/app/user-detail/user-detail.component.css
@@ -4,24 +4,37 @@
   font-weight: bold;
   padding:5px;
   width:80px;
+  margin-right:10px;
+}
+
+.btn-reset {
+  background-color: blue;
+  color:#fff;
+  font-weight: bold;
+  padding:5px;
+  width:80px;
 
   margin-right:10px;
 }
+
 .form-footer{
   text-align: center;
   padding:10px;
 }
+
 .form-group{
   padding: 10px;
   border: 1px solid #c0c0c0;
   margin-bottom: 10px;
 }
+
 .form-group label{
   display: inline-block;
   text-align: left;
   padding:5px;
   width: 120px;
 }
+
 .form-group input{
   width: 150px;
   text-align: left;
