--- a/src/app/user-detail/user-detail.component.css
+++ b/src/app/user-detail/user-detail.component.css
@@ -1,4 +1,4 @@
-.btn-save {
+/* .btn-save {
   background-color: green;
   color:#fff;
   font-weight: bold;
@@ -45,4 +45,4 @@
 .userForm{
   width: 98%;
   margin: 0 auto;
-}
+} */
