--- a/src/app/user/user.component.css
+++ b/src/app/user/user.component.css
@@ -1,4 +1,4 @@
-td{
+/* td{
   border: 1px solid black;
   text-align: center;
 }
@@ -24,4 +24,4 @@ button.update{
   background-color: green;
   font-weight: bold;
   margin: 5px;
-}
+} */
