--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,4 +1,4 @@
-#testa{
+/* #testa{
   text-align: center;
   background-color: lightblue;
   color: white;
@@ -27,4 +27,4 @@
   border: 1px solid black;
   float: left;
   width: 45%;
-}
+} */
