--- a/src/app/users/users.component.css
+++ b/src/app/users/users.component.css
@@ -1,4 +1,4 @@
-table{
+/* table{
   border: 1px solid lightblue;
 }
 
@@ -16,4 +16,4 @@ table caption{
   background-color: bisque;
   border: 1px solid black;
   text-shadow: 3px 3px lightgray ;
-}
+} */
