--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,6 +1,6 @@
 
-<table>
-  <caption>{{title}}</caption>
+<table class="table table-striped table-dark table-sm">
+  <caption class="danger">{{title}}</caption>
   <tr>
     <th>Nome</th>
     <th>Cognome</th>
@@ -8,7 +8,7 @@
     <th>Email</th>
     <th>Telefono</th>
     <th>Provincia</th>
-    <th>Action</th>
+    <th class="text-center">Action</th>
   </tr>
 <tr app-user="user" *ngFor="let user of users"
  [user-data] = "user"
