--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,11 @@
 <div class="container">
-  <div id="testa">
-    <h1>User Management System</h1>
+  <div class="row">
+    <div class="col col-6">
+      <h1>User Management System</h1>
+    </div>
+    <div class="col col-6 text-right">
+      <app-test-component></app-test-component>
+    </div>
   </div>
   <ul>
     <li>
@@ -8,13 +13,12 @@
     </li>
   </ul>
   <div id="test-component">
-    <app-test-component></app-test-component>
   </div>
   <div class="row">
-    <div class="col-9">
+    <div class="col col-xl-9">
       <app-users (updateUser) = "updateUser($event)"></app-users>
     </div>
-    <div class="col-3" *ngIf="showForm">
+    <div class="col col-xl-3" *ngIf="showForm">
       <app-user-detail [user]="userSelected"></app-user-detail>
     </div>
   </div>
