--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,18 +1,19 @@
 
-<table class="table table-striped table-dark table-sm">
-  <caption class="danger">{{title}}</caption>
-  <tr>
-    <th>Nome</th>
-    <th>Cognome</th>
-    <th>Codice Fiscale</th>
-    <th>Email</th>
-    <th>Telefono</th>
-    <th>Provincia</th>
-    <th class="text-center">Action</th>
-  </tr>
-<tr app-user="user" *ngFor="let user of users"
- [user-data] = "user"
- (onDeleteUser) = "onDeleteUser($event)"
- (onSelectUser) = "onSelectUser($event)"></tr>
+<table class="table table-striped table-dark table-bordered table-sm">
+  <caption>{{title}}</caption>
+  <thead>
+    <tr>
+      <th>Nome</th>
+      <th>Cognome</th>
+      <th>Codice Fiscale</th>
+      <th>Email</th>
+      <th>Telefono</th>
+      <th>Provincia</th>
+      <th class="text-center">Action</th>
+    </tr>
+  </thead>
+  <tbody>
+    <tr app-user="user" *ngFor="let user of users" [user-data]="user" (onDeleteUser)="onDeleteUser($event)"
+      (onSelectUser)="onSelectUser($event)"></tr>
+  </tbody>
 </table>
-
