--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,4 @@
+<app-nav></app-nav>
 <div class="container">
   <div class="row">
     <div class="col col-6">
@@ -7,19 +8,9 @@
       <app-test-component></app-test-component>
     </div>
   </div>
-  <ul>
-    <li>
-      <a href="#" class="new-user" (click) = 'newUser()'>Nuovo utente</a>
-    </li>
-  </ul>
-  <div id="test-component">
-  </div>
   <div class="row">
-    <div class="col col-xl-9">
-      <app-users (updateUser) = "updateUser($event)"></app-users>
-    </div>
-    <div class="col col-xl-3" *ngIf="showForm">
-      <app-user-detail [user]="userSelected"></app-user-detail>
+    <div class="col-12">
+      <router-outlet></router-outlet>
     </div>
   </div>
 </div>
