--- a/src/app/user-data/user-data.component.html
+++ b/src/app/user-data/user-data.component.html
@@ -1,7 +1,7 @@
 <h2>Dettagli Utente</h2>
 <table class="table table-dark">
   <tr>
-    <th>ID</th>
+    <th>Codice</th>
     <td>{{user.id}}</td>
   </tr>
   <tr>
