--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,5 +1,5 @@
 
-<table class="table table-striped table-dark table-bordered table-sm">
+<table datatable *ngIf="users" [dtOptions]="dtOptions" class="table table-striped table-dark table-bordered table-sm row-border hover">
   <caption>{{title}}</caption>
   <thead>
     <tr>
@@ -12,8 +12,13 @@
       <th class="text-center">Action</th>
     </tr>
   </thead>
-  <tbody>
+  <tbody *ngIf="users?.length != 0">
     <tr app-user="user" *ngFor="let user of users" [user-data]="user" (onDeleteUser)="onDeleteUser($event)"
       (onSelectUser)="onSelectUser($event)"></tr>
   </tbody>
+  <tbody *ngIf="users?.length == 0">
+    <tr>
+      <td colspan="7" class="no-data-available">No data!</td>
+    </tr>
+  <tbody>
 </table>
