--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,40 @@
-<p>login works!</p>
+<div class="row">
+  <div class="col-md-6 offset-md-3">
+    <h1>
+      login Utente
+    </h1>
+    <form name="loginForm" #f="ngForm" (ngSubmit)="signIn(f)">
+      <div class="form-group">
+        <label for="email">Email</label>
+        <input required  class="form-control" email type="email" ngModel #email="ngModel" name="email" id="email">
+        <div *ngIf="email.dirty && email.touched && email.invalid">
+
+          <div class="alert-danger" *ngIf="email.errors.required">
+            Il campo email è obbligatorio!
+          </div>
+          <div class="alert-danger" *ngIf="email.errors.email">
+            Il campo email non è valido!
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group">
+        <label for="password">Password</label>
+        <input class="form-control" required minlength="6" ngModel type="password" #password="ngModel" name="password" id="password">
+        <div *ngIf="password.dirty && password.touched && password.invalid">
+
+          <div class="alert-danger" *ngIf="password.errors.required">
+            Inserire la password
+          </div>
+          <div class="alert-danger" *ngIf="password.errors.minlength">
+            La password deve essere lunga {{password.errors.minlength.requiredLength }} caratteri!
+          </div>
+
+        </div>
+      </div>
+      <div class="form-group text-center">
+        <button [disabled]="!f.valid" class="btn btn-primary">Log in</button>
+      </div>
+    </form>
+  </div>
+</div>
